# ChangeLog for dev-lang/ruby
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.113 2004/11/15 07:20:56 hardave Exp $

  15 Nov 2004; Hardave Riar <hardave@gentoo.org> ruby-1.6.8-r12.ebuild:
  Stable on mips, bug #69985.

  12 Nov 2004; Joshua Kinard <kumba@gentoo.org> ruby-1.8.2_pre3.ebuild:
  Marked stable on mips.

  13 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
  files/ruby-rdoc-gentoo.diff, ruby-1.8.2_pre2.ebuild,
  ruby-1.8.2_pre3.ebuild:
  Fixed ri installation; bug #62003.

  11 Nov 2004; Olivier Crete <tester@gentoo.org> ruby-1.8.2_pre3.ebuild:
  Stable on x86, bug 69985

  11 Nov 2004; Ferris McCormick <fmccor@gentoo.org> ruby-1.6.8-r12.ebuild:
  Stable for sparc wrt Bug 69985.  Builds, installs, and runs tests.

  10 Nov 2004; Kito <kito@gentoo.org> ruby-1.8.2_pre3.ebuild:
  stable on ppc-macos re: bug 69985

  10 Nov 2004; Markus Rothe <corsair@gentoo.org> ruby-1.8.2_pre3.ebuild:
  Stable on ppc64; bug #69985

  10 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> ruby-1.8.2_pre3.ebuild:
  Stable on alpha, bug 69985.

  10 Nov 2004; <SeJo@gentoo.org> ruby-1.8.2_pre3.ebuild:
  stable on ppc gsla: 69985

  09 Nov 2004; Simon Stelling <blubb@gentoo.org> ruby-1.6.8-r12.ebuild,
  ruby-1.8.2_pre3.ebuild:
  stable on amd64. bug #69985

  09 Nov 2004; Ferris McCormick <fmccor@gentoo.org> ruby-1.8.2_pre3.ebuild:
  Stable for sparc wrt security Bug 69985. My tests and applications work as
  expected.

  10 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
  -files/oniguruma-2.3.1-fix-ppc.patch, +files/oniguruma-2.3.1-gentoo.patch,
  ruby-1.6.8-r11.ebuild, ruby-1.6.8-r12.ebuild, ruby-1.8.0-r7.ebuild,
  ruby-1.8.1-r7.ebuild, ruby-1.8.2_pre2.ebuild, ruby-1.8.2_pre3.ebuild:
  Apply oniguruma fix patch on all arches.

  09 Nov 2004; Aron Griffis <agriffis@gentoo.org> ruby-1.8.2_pre3.ebuild:
  On ia64 we need to build without optimization #48824.  Add ~ia64

*ruby-1.8.2_pre3 (09 Nov 2004)
