@@ -1,29 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 c83e931cd5b8914526359009e44140ba ChangeLog 17836
+MD5 8e22ec6f369af123d1d48535a7e580ac ChangeLog 17986
 MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
-MD5 4ff0d64ae0b5553a20e403ccebac1a46 ruby-1.6.8-r11.ebuild 1973
+MD5 058e9207055f949fa2f86ed07133c2cc ruby-1.8.1-r7.ebuild 2830
 MD5 d7203d2f790bf0adaed20a0e28230bf7 ruby-1.6.8-r12.ebuild 1939
+MD5 4ff0d64ae0b5553a20e403ccebac1a46 ruby-1.6.8-r11.ebuild 1973
 MD5 4f420e12003a91bd479563bef413fe88 ruby-1.8.0-r7.ebuild 2777
 MD5 082dcf3f0fb5485c1e7c79478bd6c345 ruby-1.8.2_pre3.ebuild 3453
-MD5 058e9207055f949fa2f86ed07133c2cc ruby-1.8.1-r7.ebuild 2830
-MD5 23275105da1c807eb72ac2be9cd10f01 ruby-1.8.2_pre2.ebuild 3368
-MD5 00ccb2b51acb8e90488b9bd2f8bf2c32 files/digest-ruby-1.6.8-r11 136
-MD5 be89d4c412387337e14a1d141b90b125 files/oniguruma-2.3.1-gentoo.patch 593
+MD5 fe242a30b324c16d382f81621e3fef03 ruby-1.8.2_pre4.ebuild 3461
 MD5 19938f076658cc6b4edb91d62ae357f0 files/digest-ruby-1.8.0-r7 125
-MD5 844ffd93bddeeb9decf86b49669423e8 files/digest-ruby-1.6.8-r12 136
 MD5 3e8d8ff915f444c975169748675b06c9 files/digest-ruby-1.8.1-r7 137
-MD5 a5d6f26168583bd4fd399f0855323175 files/digest-ruby-1.8.2_pre2 134
+MD5 be89d4c412387337e14a1d141b90b125 files/oniguruma-2.3.1-gentoo.patch 593
 MD5 d05f63da27634456886e7c924eaf96da files/ruby-1.6.8-fix-x86_64.patch 431
-MD5 d3cbd264b66bd70c262aaf9e4a79aa4b files/digest-ruby-1.8.2_pre3 134
-MD5 c20ec6eaf6847e4eb46d8865241f1016 files/ruby-1.8.0-CGI::Session.patch 801
-MD5 e7fc14a584186eb629eddc20bc853a24 files/ruby-rdoc-gentoo.diff 455
+MD5 00ccb2b51acb8e90488b9bd2f8bf2c32 files/digest-ruby-1.6.8-r11 136
 MD5 a061fe32b8e0538c203bccebcd2ad8ac files/ruby-1.6.8-20040728-20041024.diff 3094
+MD5 c20ec6eaf6847e4eb46d8865241f1016 files/ruby-1.8.0-CGI::Session.patch 801
+MD5 844ffd93bddeeb9decf86b49669423e8 files/digest-ruby-1.6.8-r12 136
+MD5 ecca7af5d1073dc5dee4a74861d1db6f files/digest-ruby-1.8.2_pre4 134
+MD5 e7fc14a584186eb629eddc20bc853a24 files/ruby-rdoc-gentoo.diff 455
+MD5 d3cbd264b66bd70c262aaf9e4a79aa4b files/digest-ruby-1.8.2_pre3 134
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.9.10 (GNU/Linux)
+Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFBsAGMroRuSHgZdywRAhOUAJwLDP2yOfcFgXqaNBHyvM0MZs6KCwCfZI/v
-phQSlozjBq/n5Gq0RnbshAE=
-=iiIu
+iD8DBQFByUyYVWNWqTUmv+0RAiNAAJ9pDtKwXXoCf+iHQWR+PH3OvogipgCgseTt
+2XabEwdhFm6sTMukeS6agl4=
+=ARGm
 -----END PGP SIGNATURE-----
