@@ -1,2 +1,0 @@
-MD5 f40dae2bd20fd41d681197f1229f25e0 ruby-1.8.2-preview2.tar.gz 3440953
-MD5 d7bd9315973b64aa2e7c6eb58ea3f483 onigd2_3_2.tar.gz 198680
