@@ -1,0 +1,2 @@
+MD5 2f53d4dc4b24e37799143645772aabd0 ruby-1.8.2-preview4.tar.gz 3602003
+MD5 f64bad67181b02fbd67fac16710537f3 onigd2_4_0.tar.gz 202285
