@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/ruby
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.113 2004/11/15 07:20:56 hardave Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.114 2004/12/22 10:36:55 usata Exp $
+
+*ruby-1.8.2_pre4 (22 Dec 2004)
+
+  22 Dec 2004; Mamoru KOMACHI <usata@gentoo.org> -ruby-1.8.2_pre2.ebuild,
+  +ruby-1.8.2_pre4.ebuild:
+  Version bumped.
 
   15 Nov 2004; Hardave Riar <hardave@gentoo.org> ruby-1.6.8-r12.ebuild:
   Stable on mips, bug #69985.
